package com.kyle.quiz;

import java.io.IOException;

/*
    Author:     Kyle
    Class:      InvalidQuizException
    Desc:       invalid quiz exception
 */
public class InvalidQuizException extends IOException {
}// end of InvalidQuizException class
