package com.kyle.quiz;

/*
    Author:     Kyle
    Enum:       QuestionTypes
    Desc:       question types
 */
public enum QuestionTypes {
    multiple_choice,
    blank_box
}// end of QuestionTypes enum
