package com.kyle.quiz;

/*
    Author:     Kyle
    Interface:  SubmittableQuiz
    Desc:       interface for application window controllers
 */
public interface SubmittableQuiz {
    default void quizComplete() {}
}// end of SubmittableQuiz interface
